[MOD] 提交代码，完成视频播放

--- a/src/WPlayer/res/WPlayer.qrc
+++ b/src/WPlayer/res/WPlayer.qrc
@@ -1,4 +1,7 @@
 <RCC>
-    <qresource prefix="WPlayer">
+    <qresource prefix="/WPlayer"/>
+    <qresource prefix="/Icons">
+        <file>Icons/pause.svg</file>
+        <file>Icons/play.svg</file>
     </qresource>
 </RCC>
